[gd_scene load_steps=19 format=2]

[ext_resource path="res://addons/Autoanim/CharacterBases/Base/TestAnimData.tres" type="Resource" id=1]
[ext_resource path="res://addons/Autoanim/Resources/Scripts/AABaseCharacter.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=2]
resource_local_to_scene = true
height = 2.0

[sub_resource type="Animation" id=3]
resource_name = "RESET"
length = 0.001

[sub_resource type="AnimationNodeAnimation" id=130]
animation = "IdleSouth"

[sub_resource type="AnimationNodeAnimation" id=131]
animation = "IdleEast"

[sub_resource type="AnimationNodeAnimation" id=132]
animation = "IdleNorth"

[sub_resource type="AnimationNodeAnimation" id=133]
animation = "IdleWest"

[sub_resource type="AnimationNodeBlendSpace2D" id=4]
blend_point_0/node = SubResource( 130 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 131 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 132 )
blend_point_2/pos = Vector2( 0, -1 )
blend_point_3/node = SubResource( 133 )
blend_point_3/pos = Vector2( -1, 0 )
blend_mode = 2

[sub_resource type="AnimationNodeAnimation" id=52]
animation = "MoveSouth"

[sub_resource type="AnimationNodeAnimation" id=53]
animation = "MoveEast"

[sub_resource type="AnimationNodeAnimation" id=54]
animation = "MoveNorth"

[sub_resource type="AnimationNodeAnimation" id=55]
animation = "MoveWest"

[sub_resource type="AnimationNodeBlendSpace2D" id=5]
blend_point_0/node = SubResource( 52 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 53 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 54 )
blend_point_2/pos = Vector2( 0, -1 )
blend_point_3/node = SubResource( 55 )
blend_point_3/pos = Vector2( -1, 0 )
blend_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=6]

[sub_resource type="AnimationNodeStateMachineTransition" id=7]

[sub_resource type="AnimationNodeStateMachine" id=8]
resource_local_to_scene = true
states/Idle/node = SubResource( 4 )
states/Idle/position = Vector2( 356, 93 )
states/Move/node = SubResource( 5 )
states/Move/position = Vector2( 652, 93 )
transitions = [ "Idle", "Move", SubResource( 6 ), "Move", "Idle", SubResource( 7 ) ]

[sub_resource type="AnimationNodeStateMachinePlayback" id=9]

[node name="BaseCharacter" type="KinematicBody2D"]
script = ExtResource( 3 )
character_name = "BaseCharacter"
animation_data = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="CharacterSprite" type="Sprite" parent="."]

[node name="SpriteAnimationPlayer" type="AnimationPlayer" parent="CharacterSprite"]
anims/RESET = SubResource( 3 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 8 )
anim_player = NodePath("../CharacterSprite/SpriteAnimationPlayer")
active = true
parameters/playback = SubResource( 9 )
parameters/Idle/blend_position = Vector2( 0, 1 )
parameters/Move/blend_position = Vector2( 0, 1 )
